# son-07-Object_analyze-and-Create_dashboard

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
analyze_dashboard_pkg/: image_analyzer_node.py  img_utils.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/analyze_dashboard_pkg/share/ament_index/resource_index/parent_prefix_path/: analyze_dashboard_pkg
install/analyze_dashboard_pkg/share/analyze_dashboard_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
launch/: dashboard_launch.py
log/: latest_build
resource/: analyze_dashboard_pkg
web_dashboard/: dashboard.py
web_dashboard/install/: local_setup.sh  setup.sh
web_dashboard/log/: latest_build
web_dashboard/templates/: index.html
